--- a/tulving/TulvingTest.org
+++ b/tulving/TulvingTest.org
@@ -130,15 +130,30 @@ The memory performance of LLMs in the Tulving Test of direct comparison is prese
 |-----------------------+-------------+---------+----------------+---------|
 | /                     |           < |         |              < |         |
 | Copy Cue Word         |           1 |    0.46 |           0.46 |       0 |
-| Non-Copy Associated   |           0 |    0.47 |           0.49 |       0 |
-| Non-copy Rhyme        |           0 |    0.50 |           0.18 |       0 |
+| Non-Copy Associated   |           0 |    0.47 |           0.49 |    0.40 |
+| Non-copy Rhyme        |           0 |    0.50 |           0.18 |    0.01 |
 | Non-copy Unrelated    |           0 |    0.41 |           0.08 |       0 |
 
 Within each result table, several comparisons are of interest. First the probability that copy cues were familiar was higher than the probability of identification and production of the target word in response to the copy cue, in both the human (Table [[tbl:3]]) and the  LLM (Table [[tbl:4]]) subject--here ~mistral-7b-instruct-v0~. Second, the probability that extra-list unrelated cues were (incorrectly) recognized as members of the memorized list increased from the immediate to delayed test, in both human and LLM subjects. Remarkably and contrasting with the human subject, in the immediate recognition task the LLM never erred: no false positives for non-copy cues and 100% familiarity for copy cues. Third, rhyme words proved in both cases more effective than unrelated distractor cues in recall. Fourth, strongly associated cues were considered members of the list with much higher probability in the immediate test, the difference being greatly reduced in the delayed test. The case of the LLM subject varies a bit, since no false positives are produced in the immediate recognition test, while they appear with similar probabilities in the delayed recognition test.
 
-Stating the obvious when comparing the two tables: firts, the LLM performs immediate recognition faultlessly, while displaying much weaker performance than the human subject on the delayed recognition: lower probability on copy cues, and significantly higher probabilities of false positives (judging non copy cues to be included in the list). Second, in the immediate recall task the LLM memory performance is weaker than in the human subject, more so for copy cues than for associate and unrelated cues--which seems paradoxical given the perfect match in the recognition task. The LLM, however, fails miserably on the delayed identification task, unable to recall any word in the list whatever the cued prompt. The discussion section looks into the context length and so-called /hallucination/ phenomena as a possible cause for this last observation.
+Stating the obvious when comparing the two tables: first, the LLM performs immediate recognition faultlessly, while displaying much weaker performance than human subjects on the delayed recognition: lower probability on copy cues, and significantly higher probabilities of false positives (i.e. judging non-copy cues to be included in the list). Second, in the immediate recall task the LLM memory performance is weaker than in the human subject, more so for copy cues than for associate and unrelated cues--which seems paradoxical given the perfect match in the recognition task. The LLM, however, siplays an intriguing pattern on the delayed identification task, comparable to human subjects when the cue is an associate word but unable to recall any word in the list when the the cued prompt is a rhyme word. The discussion section looks into the context length and so-called /hallucination/ phenomena as a possible cause for this last observation.
 
 * Discussion
+The LLM "Tulving Test" rests on the "encoding/retrieval paradigm" championed bu Tulving. In the paradigm, both encoding and retrieval conditions are experimentally manipulated in order to reveal specificities of each. The results presented in the previous section are part of a program of experiments to explore the relevance of these specificities, as expressed in the GAPS model above, to the current crop of LLMs in Generative AI.
+
+In the original direct comparison experiment on human subjects, the effect of copy cues was first discussed. The finding then presented a paradox. The level of of performance with copy cues, i.e. cue words taken from the previously studied list, was generally higher in the familiarity conversion than for the identification conversion (see Table [[tbl:3]]). How can the rememberer have difficulty identifying the name of a studied item in the list, when it is the /same/ word which is used in the cue in the recall test, whereas it is asserted as a member of the list in the recognition test? Tulving suggests two possibilities: (i) because of differences in task requirements, the nature of the ecphoric process is different for the two groups of rememberers; and (ii) different types of conversion require different kinds, different amounts, or both of ecphoric information, namely that judgments of identification of a particular aspect of an experienced episode requires ecphoric information of "higher quality" than judgments that the cue word is familiar. Tulving favored the latter over the former and suggested a theory of /conversion thresholds/ for different kinds of memory tasks.
+
+#+CAPTION: *The Synergistic Ecphory Model (SEM)*. Source for figure: [cite:@Tulving1983 Ch.14 Fig.14.3]. Schematic diagram depicting a given episode such as the appearance of a familiar word in a particular study list. Variations of trace information, /a/, /b/ and /c/ correspond to different engrams resulting from many different possible encodings of the same event, only some of which are realized on a particular occasion. Retrieval information /x/, /y/, /z/ correspond to the different potentially relevant retrieval cues (recall) that may or may not be present on a particular occasion. (We simplify here under the assumption of a single dimension for memory traces and a single dismension for retrieval information, resulting in a bidimensional ecphoric vector space.) The curved lines represent conversion thresholds for different memory tasks, here recognition/familiarity and recall/identification. According to the position of the point representing the synergy of retrieval and trace information relative to the threshold lines, the rememberer would pass or not the given test.
+#+NAME: fig:sem
+[[file:sem.png]]
+
+The situation with LLM rememberers is somewhat exacerbated as to the effects of copy cues. Not only the probability of recognition is higher than the same in the human test, but it is a perfect 100%. Furthermore, the probability of recall is lower than the probability of recognition, as for the human rememberer but significantly lower for LLM. So the finding here is even more paradoxical than before: what could explain the performance degradation? Both avenues of investigations are also relevant here. 
+
+Recent AI research on prompt engineering [cite:@wei2023chainofthought] may point to the first of Tulving's suggestions as a sensible explanation of the aggravated findings for the LLM rememberer. Different structures in the prompts, expressing recognition requests versus recall requests, may indeed entail different ecphoric processes rather than different quantity of information being required [cite:@li24:_memor_consc_large_languag_model]. On the other hand, the conversion thresholds in the SEM are an attractive alternative as they refer to an ecphoric vector space, which seems cogent to the vector space embedding found in the Transformer architecture (the explanation or the interpretation of which remains crucial for LLM acceptability in general [cite:@tennenholtz23:_demys_embed_spaces_large_languag_model]).
+
+The effects of associative cues (non-copy cues) also call for discussions. Data in Table [[tbl:3]] showed a dissociation between the tasks when associative cues were used. Judgments of associative cues as included in the study list (false positives) increased from the immediate to the delayed test, whereas their effectiveness at eliciting the target word, in the recall task, decreased. What Table [[tbl:4]] first shows is that, even more acutely, the false positives appear only in the chat-based delayed test of recognition, whereas the LLM rememberer failed to pass any chat-based delayed test of identification. In order to quantify the correlation, Tulving introduced the measure of /cue valence/ [cite:@Tulving_Watkins] with respect to an aspect of an event or episode refers to the probability with which that aspect of the event can be recalled in the presence of the cue. Table [[tbl:3]] allows the quantification of the negative correlation between false positive response rate and the identification valence of associative cues. The SEM above makes also sense here, in explaining out the negative correlation by pinpointing the position in the ecphoric space relative to the conversion threshold curves. In Table [[tbl:4]] however, the memory performance of the delayed recall tasks appears quite contrasted: a copy cue does not recall a single word of the sudy list, even though the cue is itself that target word! Rhyme cue words fail almost systematically at evoking a target word in the list. Associate cue words, in contrast, trigger comparable, if slightly better, recall performance than in human subjects and unrelated are unrelated.
+
+
 
 Compare to Estes' short/long-term memomy in human and computer discussion [cite:@Estes1980].
 #+BEGIN_QUOTE
